Createed A PDF View and Leave System Most of Comepledt